# ising

./: CMakeLists.txt  MTRand.h  Makefile  README.md  main.cpp  para.in
